# pokemon-oop-explorer

./: .gitignore  README.md  fetch_pokeapi.py  pokeapi_cache.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/uml/: README.md  _theme.iuml
docs/uml/class_diagram/sources/: domain_class_diagram.puml  full_class_diagram.puml
docs/uml/sequences/sources/: full_sequence_diagram.puml  seq_1_app_startup.puml  seq_2_node_selection_refresh.puml  seq_3_zoom_class.puml  seq_4_evolution_check.puml  seq_5_trainer_party_update.puml  seq_6_identity_mechanics.puml  seq_7_stats_analysis.puml
docs/uml/use_cases/sources/: overview.puml  uc-1_browse_catalog.puml  uc-2_inspect_domain.puml  uc-5_analyze_stats.puml  (+5 more)
pokemon_oop_explorer/: __init__.py  app.py  main.py
pokemon_oop_explorer/data/: starter_seed.py
pokemon_oop_explorer/introspect/: __init__.py  ascii_renderer.py  class_graph.py  relationship_detector.py
pokemon_oop_explorer/models/: __init__.py  abilities.py  base.py  effects.py  enums.py  evolution.py  items.py  moves.py  pokemon.py  status.py  trainer.py  value_objects.py  visitor.py
pokemon_oop_explorer/services/: repository.py  sprite_service.py  stat_service.py
pokemon_oop_explorer/theme/: explorer.tcss
pokemon_oop_explorer/ui/: __init__.py  presenters.py
pokemon_oop_explorer/ui/widgets/: panels.py
proposal/: PROJECT_PROPOSAL.md
sprites/regular/: red  steven
tests/: test_ascii_uml.py  test_class_graph.py  test_effects.py  test_evolution.py  test_identity.py  test_repository.py  test_trainer.py
writeup/: Makefile  writeup.tex
